@startuml
set namespaceSeparator \\

interface Cart\\Business\\Contract\\ProductRepositoryInterface {
    +get(string $sku): Product
}

interface Product\\Business\\Contract\\ProductRepositoryInterface {
    +get(ProductSearchRequest $searchRequest): ProductCollection
}

class Product\\Presentation\\Component\\Cart\\Bridge\\ProductRepositoryBridge implements Cart\\Business\\Contract\\ProductRepositoryInterface {
    -ProductRepositoryInterface $localProductRepository
    +get(string $sku): Cart\\Business\\Domain\\Product
}

namespace  Product\\Business\\Contract #Aqua {}
namespace  Product\\Business\\Domain #Aqua {}
namespace  Cart\\Business\\Contract #LightGreen {}
namespace  Cart\\Business\\Domain #LightGreen {}
namespace  Product\\Presentation\\Component\\Cart\\Bridge #Orange {}
namespace  Product\\DataAccess\\Repository #Aqua {}


class Product\\Business\\Domain\\ProductCollection {
    -$items: Product\\Business\\Domain\\Product[]
}


class Product\\Business\\Domain\\Product {
    +getSku(): string
    +getName(): string
    +getPrice(): float
    +getBoxSizeInCubicMeter(): float
}

class Cart\\Business\\Domain\\Product {
    +getSku(): string
    +getName(): string
    +getPrice(): float
}

class Product\\DataAccess\\Repository\\ProductRepository implements Product\\Business\\Contract\\ProductRepositoryInterface {
    +get(ProductSearchRequest $searchRequest): ProductCollection
}

Product\\Presentation\\Component\\Cart\\Bridge\\ProductRepositoryBridge ..> Product\\Business\\Domain\\ProductCollection
Product\\Business\\Domain\\ProductCollection ..> Product\\Business\\Domain\\Product
Product\\Presentation\\Component\\Cart\\Bridge\\ProductRepositoryBridge --o Product\\Business\\Contract\\ProductRepositoryInterface
Product\\Presentation\\Component\\Cart\\Bridge\\ProductRepositoryBridge .up.> Cart\\Business\\Domain\\Product

@enduml
